--- a/AppProyecto3/templates/AppProyecto3/cursos.html
+++ b/AppProyecto3/templates/AppProyecto3/cursos.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Cursos</h1>
+                <h1>Aca van los Cursos</h1>
             </div>
         </div>
     </div>
