--- a/AppProyecto3/templates/AppProyecto3/inicio.html
+++ b/AppProyecto3/templates/AppProyecto3/inicio.html
@@ -1,11 +1,15 @@
 {% extends 'AppProyecto3/padre.html' %}
 
+{% block titulo %}
+Pagina INICIO
+{% endblock titulo %}
+
 {% block contenido %}
 <section class="features-icons bg-light text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Bienvenido a mi sitio</h1>
+                <h1>Bienvenido a INICIO</h1>
             </div>
         </div>
     </div>
