--- a/AppProyecto3/templates/AppProyecto3/profesores.html
+++ b/AppProyecto3/templates/AppProyecto3/profesores.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>PROFESORES</h1>
-</body>
-</html>
+{% extends 'AppProyecto3/padre.html' %}
+
+{% block titulo %}
+Pagina PROFESORES
+{% endblock titulo %}
+
+{% block contenido %}
+<section class="features-icons bg-light text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1>Bienvenido a PROFESORES</h1>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock contenido %}
