--- a/AppProyecto3/templates/AppProyecto3/padre.html
+++ b/AppProyecto3/templates/AppProyecto3/padre.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>{% block titulo %}{% endblock titulo %}</title>
+        <title>{% block titulo %}Titulo PADRE{% endblock titulo %}</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'Proyecto3/assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
@@ -34,7 +34,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Generate more leads with a professional landing page!</h1>
+                            <h1 class="mb-5">TERCERA ENTREGA - JUAN CAZENAVE</h1>
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
