--- a/AppProyecto3/templates/AppProyecto3/cursos.html
+++ b/AppProyecto3/templates/AppProyecto3/cursos.html
@@ -1,11 +1,20 @@
 {% extends 'AppProyecto3/padre.html' %}
 
+{% block titulo %}
+Formulario - Agregar Curso
+{% endblock titulo %}
+
 {% block contenido %}
 <section class="features-icons bg-light text-center">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Aca van los Cursos</h1>
+                <form action="{% url 'cursos' %}" method="POST">
+                {% csrf_token %} 
+                    <p>Curso: <input type="text" name="curso"></p>
+                    <p>Camada: <input type="number" name="camada"></p>
+                    <input type="submit" value="Enviar">
+                </form>
             </div>
         </div>
     </div>
