--- a/AppProyecto3/templates/AppProyecto3/estudiantes.html
+++ b/AppProyecto3/templates/AppProyecto3/estudiantes.html
@@ -1,7 +1,7 @@
 {% extends 'AppProyecto3/padre.html' %}
 
 {% block titulo %}
-Pagina ESTUDIANTES
+PAGINA ESTUDIANTES
 {% endblock titulo %}
 
 {% block contenido %}
@@ -9,7 +9,13 @@ Pagina ESTUDIANTES
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Bienvenido a ESTUDIANTES</h1>
+                <form action="{% url 'estudiantes' %}" method="POST">
+                {% csrf_token %} 
+                    <p>Nombre: <input type="text" name="nombre"></p>
+                    <p>Apellido: <input type="text" name="apellido"></p>
+                    <p>E-mail: <input type="text" name="email"></p>
+                    <input type="submit" value="Enviar">
+                </form>
             </div>
         </div>
     </div>
